--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <header class="main-header">
     <nav class="main-navigation">
     <a class="main-navigation-logo" href="#">
-      <img class="main-header-logo" src="#" alt="логотип города Седона">
+      <img class="main-header-logo" src="img/logotip.svg" alt="логотип города Седона">
     </a>
     <ul class="main-navigation-list">
     <li class="main-navigation-item">
@@ -25,14 +25,16 @@
     </li>
     </ul>
     <ul class="main-navigation-list navigation-user">
-    <li class="navigation-item">
-      <a class="navigation-link" href="#">
+    <li class="navigation-user-item">
+      <a class="navigation-user-link" href="#">
+        <img class="navigation-user-image" src="img/loup.svg">
         <span class="visually-hidden">Поиск
         </span>
       </a>
     </li>
     <li class="navigation-item">
       <a class="navigation-link" href="#">
+        <img class="navigation-user-image" src="img/heart.svg">
         <span class="visually-hidden">Избранное
         </span>
         <span class="notification-badge">12
@@ -51,6 +53,7 @@
         <ul class="breadcrumbs">
           <li class="breadcrumbs-item">
             <a class="breadcrumbs-link" href="index.html">
+              <img class="breadcrumbs-img" src="img/catalog/home-page.svg" width="12" height="12" alt="возвращение на главную страницу">
               <span class="visually-hidden">Главная
               </span>
             </a>
@@ -141,7 +144,7 @@
       <ul class="product-list">
         <li class="product-item">
           <a class="product-card-link" href="#">
-            <img class="product-card-image" src="#" alt="скалы каньона">
+            <img class="product-card-image" src="img/catalog/house/amara resort & spa.jpg" width="300" height="212" alt="скалы каньона">
             <h3 class="product-card-title">Amara Resort & Spa
             </h3>
           </a>
@@ -158,7 +161,7 @@
         </li>
         <li class="product-item">
           <a class="product-card-link" href="#">
-            <img class="product-card-image" src="#" alt="скалы каньона">
+            <img class="product-card-image" src="img/catalog/house/villas at poco dablo.jpg" width="300" height="212" alt="скалы каньона" >
             <h3 class="product-card-title">Villas at Poco Diablo
             </h3>
           </a>
@@ -175,7 +178,7 @@
         </li>
         <li class="product-item">
           <a class="product-card-link" href="#">
-            <img class="product-card-image" src="#" alt="скалы каньона">
+            <img class="product-card-image" src="img/catalog/house/desert quail inn.jpg" width="300" height="212" alt="скалы каньона">
             <h3 class="product-card-title">Desert Quail Inn
             </h3>
           </a>
@@ -192,7 +195,7 @@
         </li>
         <li class="product-item">
           <a class="product-card-link" href="#">
-            <img class="product-card-image" src="#" alt="гостиница GreenTree Inn">
+            <img class="product-card-image" src="img/catalog/house/greentee inn.jpg" width="300" height="212" alt="скалы каньона">
             <h3 class="product-card-title">GreenTree Inn
             </h3>
           </a>
@@ -248,39 +251,42 @@
       </section>
     </main>
   </body>
-    <footer class="main-footer">
-      <section class="social-media">
-        <h2 class="visually-hidden">Контактные данные
-        </h2>
-        <ul class="contacts-social-list">
-          <li class="contacts-social-item">
-            <a class="button button-social" href="#">
-              <span class="visually-hidden">Vkontakte
-              </span>
-            </a>
-          </li>
-          <li class="contacts-social-item">
-            <a class="button button-social" href="#">
-              <span class="visually-hidden">Telegram
-              </span>
-            </a>
-          </li>
-          <li class="contacts-social-item">
-            <a class="button button-social" href="#">
-              <span class="visually-hidden">YouTube
-              </span>
-            </a>
-          </li>
-        </ul>
-      </section>
-      <section class="contacts">
-        <a class="contacts-phone" href="tel:+78005558628">+7 (812) 812-12-12
-        </a>
-      </section>
-      <section class="author">
-      <a class="watermark" href="https://htmlacademy.ru">
-        <img class="creator" src="#" alt="логотип онлайн-школы HTML Academy">
+  <footer class="main-footer">
+    <section class="social-media">
+      <h2 class="visually-hidden">Контактные данные
+      </h2>
+      <ul class="social-list">
+        <li class="social-item">
+          <a class="button button-social" href="#">
+            <img class="social-image" src="img/social-media/vkontakte.svg" width="24" height="14">
+            <span class="visually-hidden">Vkontakte
+            </span>
+          </a>
+        </li>
+        <li class="social-item">
+          <a class="button button-social" href="#">
+            <img class="social-image" src="img/social-media/telegram.svg" width="18" height="15.1">
+            <span class="visually-hidden">Telegram
+            </span>
+          </a>
+        </li>
+        <li class="social-item">
+          <a class="button button-social" href="#">
+            <img class="social-image" src="img/social-media/youtube.svg" width="22" height="17">
+            <span class="visually-hidden">YouTube
+            </span>
+          </a>
+        </li>
+      </ul>
+    </section>
+    <section class="contacts">
+      <a class="contacts-phone" href="tel:+78005558628">+7 (812) 812-12-12
       </a>
-      </section>
-    </footer>
-    </html>
+    </section>
+    <section class="author">
+    <a class="watermark" href="https://htmlacademy.ru">
+      <img class="creator" src="img/HTML Academy.svg" alt="логотип онлайн-школы HTML Academy">
+    </a>
+    </section>
+  </footer>
+  </html>
