--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a class="main-navigation-logo-link" href="#">
-          <img class="main-navigation-logo" src="#" alt="логотип города Седона">
+          <img class="main-header-logo" src="img/logotip.svg" alt="логотип города Седона" width="140" height="70.05">
         </a>
         <ul class="main-navigation-list">
           <li class="main-navigation-item">
@@ -27,12 +27,14 @@
         <ul class="navigation-user-list">
           <li class="navigation-user-item">
             <a class="navigation-user-link" href="#">
+              <img class="navigation-user-image" src="img/loup.svg" width="20" height="20">
               <span class="visually-hidden">Поиск
               </span>
             </a>
           </li>
           <li class="navigation-user-item">
             <a class="navigation-user-link" href="#">
+              <img class="navigation-user-image" src="img/heart.svg" width="20" height="20">
               <span class="visually-hidden">Избранное
               </span>
               <span class="notification-badge">12
@@ -46,6 +48,9 @@
     </header>
     <main class="main-index">
       <section class="hero">
+        <img class="hero-background" src="img/index/index-background.jpg" width="1200" height="485">
+        <img class="hero-welcome" src="img/index/welcome.svg" width="458" height="352">
+        <img class="stairs" src="img/index/stairs.svg" width="1200" height="57">
         <h1 class="visually-hidden">Седона — город в Аризоне
         </h1>
       </section>
@@ -58,6 +63,7 @@
       </h2>
       <ul class="advantages-list">
         <li class="advantages-item">
+          <img class="city" src="img/index/city.jpg" widht="800" height="385" alt="флаг штатов на фоне здания внутри города Седон">
           <h3 class="advantages-title">Настоящий городок
           </h3>
           <p>Седона — не аттракцион для туристов, там течёт своя жизнь
@@ -81,10 +87,11 @@
           </p>
         </li>
         <li class="advantages-item">
-        <h3 class="advantages-title">Там есть мост дьявола
-        </h3>
-        <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется
-        </p>
+          <img class="devil's bridge" src="img/index/devil's bridge.jpg" width="800" height="385" alt="мост дьявола">
+          <h3 class="advantages-title">Там есть мост дьявола
+          </h3>
+          <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется
+          </p>
         </li>
     </ul>
     </section>
@@ -97,18 +104,21 @@
       </p>
       <ul class="infrastructure-list">
         <li class="infrastructure-item">
+          <img class="infrastructure-image" src="img/index/infrastructure/house.svg" width="75" height="72">
           <h3 class="infrastructure-title">Жильё
           </h3>
           <p class="infrastructure-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!
           </p>
         </li>
         <li class="infrastructure-item">
+          <img class="infrastructure-image" src="img/index/infrastructure/house.svg" width="74" height="70">
           <h3 class="infrastructure-title">Еда
           </h3>
           <p class="infrastructure-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
           </p>
         </li>
         <li class="infrastructure-item">
+          <img class="infrastructure-image" src="img/index/infrastructure/souvenir.svg" width="64" height="76">
           <h3 class="infrastructure-title">Сувениры
           </h3>
           <p class="infrastructure-description">Не только китайского, но и настоящего местного производства!
@@ -125,6 +135,7 @@
       </a>
     </section>
     <section class="subcribe">
+      <img class="subscribe-background" src="img/index/subscribe-background.jpg" width="1200" height="414,86">
       <h2 class="subscribe-title">Подпишитесь на рассылку
       </h2>
       <p class="search-description">Только полезная информация и никакого спама, честное бойскаутское!
@@ -141,21 +152,24 @@
       <section class="social-media">
         <h2 class="visually-hidden">Контактные данные
         </h2>
-        <ul class="contacts-social-list">
-          <li class="contacts-social-item">
+        <ul class="social-list">
+          <li class="social-item">
             <a class="button button-social" href="#">
+              <img class="social-image" src="img/social-media/vkontakte.svg" width="24" height="14">
               <span class="visually-hidden">Vkontakte
               </span>
             </a>
           </li>
-          <li class="contacts-social-item">
+          <li class="social-item">
             <a class="button button-social" href="#">
+              <img class="social-image" src="img/social-media/telegram.svg" width="18" height="15.1">
               <span class="visually-hidden">Telegram
               </span>
             </a>
           </li>
-          <li class="contacts-social-item">
+          <li class="social-item">
             <a class="button button-social" href="#">
+              <img class="social-image" src="img/social-media/youtube.svg" width="22" height="17">
               <span class="visually-hidden">YouTube
               </span>
             </a>
@@ -168,7 +182,7 @@
       </section>
       <section class="author">
       <a class="watermark" href="https://htmlacademy.ru">
-        <img class="creator" src="#" alt="логотип онлайн-школы HTML Academy">
+        <img class="creator" src="img/HTML Academy.svg" alt="логотип онлайн-школы HTML Academy">
       </a>
       </section>
     </footer>
