--- a/index.html
+++ b/index.html
@@ -3,24 +3,25 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <header class="main-header">
-      <nav class="main-navigation">
-        <a class="main-navigation-logo-link" href="#">
-          <img class="main-header-logo" src="img/logotip.svg" alt="логотип города Седона" width="140" height="70.05">
+      <nav class="header-navigation">
+        <a class="navigation-logo-link" href="#">
+          <img class="navigation-logo" src="img/logotip.svg" alt="логотип города Седона" width="140" height="70.05">
         </a>
-        <ul class="main-navigation-list">
-          <li class="main-navigation-item">
-            <a class="main-navigation-link active" href="">Главная
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link active" href="">Главная
             </a>
           </li>
-          <li class="main-navigation-item">
-            <a class="main-navigation-link" href="#">О Седоне
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">О Седоне
             </a>
           </li>
-          <li class="main-navigation-item">
-            <a class="main-navigation-link" href="catalog.html">Гостиницы
+          <li class="navigation-item">
+            <a class="navigation-link" href="catalog.html">Гостиницы
             </a>
           </li>
         </ul>
