--- a/catalog.html
+++ b/catalog.html
@@ -130,14 +130,17 @@
         <p class="result">Найдено гостиниц: 38
         </p>
         <a class="button button-light-active" href="#">
+          <img src="img/catalog/card.svg" width="16" height="14">
           <span class="visually-hidden">Показать карточки
           </span>
         </a>
         <a class="button button-light" href="#">
+          <img src="img/catalog/tile.svg" width="16" height="14">
           <span class="visually-hidden">Показать плитки
           </span>
         </a>
         <a class="button button-light" href="#">
+          <img src="img/catalog/list.svg" width="16" height="14">
           <span class="visually-hidden">Показать список
           </span>
         </a>
