--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <header class="main-header">
     <nav class="main-navigation">
     <a class="main-navigation-logo" href="#">
-      <img class="main-header-logo" src="img/logotip.svg" alt="логотип города Седона">
+      <img class="main-header-logo" src="img/logotip.svg" width="140" height="70.05" alt="логотип города Седона">
     </a>
     <ul class="main-navigation-list">
     <li class="main-navigation-item">
@@ -27,14 +27,14 @@
     <ul class="main-navigation-list navigation-user">
     <li class="navigation-user-item">
       <a class="navigation-user-link" href="#">
-        <img class="navigation-user-image" src="img/loup.svg">
+        <img class="navigation-user-image" src="img/loup.svg" width="20" height="20" alt="">
         <span class="visually-hidden">Поиск
         </span>
       </a>
     </li>
     <li class="navigation-item">
       <a class="navigation-link" href="#">
-        <img class="navigation-user-image" src="img/heart.svg">
+        <img class="navigation-user-image" src="img/heart.svg" width="20" height="20" alt="">
         <span class="visually-hidden">Избранное
         </span>
         <span class="notification-badge">12
@@ -130,17 +130,17 @@
         <p class="result">Найдено гостиниц: 38
         </p>
         <a class="button button-light-active" href="#">
-          <img src="img/catalog/card.svg" width="16" height="14">
+          <img src="img/catalog/card.svg" width="16" height="14" alt="">
           <span class="visually-hidden">Показать карточки
           </span>
         </a>
         <a class="button button-light" href="#">
-          <img src="img/catalog/tile.svg" width="16" height="14">
+          <img src="img/catalog/tile.svg" width="16" height="14" alt="">
           <span class="visually-hidden">Показать плитки
           </span>
         </a>
         <a class="button button-light" href="#">
-          <img src="img/catalog/list.svg" width="16" height="14">
+          <img src="img/catalog/list.svg" width="16" height="14" alt="">
           <span class="visually-hidden">Показать список
           </span>
         </a>
@@ -261,21 +261,21 @@
       <ul class="social-list">
         <li class="social-item">
           <a class="button button-social" href="#">
-            <img class="social-image" src="img/social-media/vkontakte.svg" width="24" height="14">
+            <img class="social-image" src="img/social-media/vkontakte.svg" width="24" height="14" alt="">
             <span class="visually-hidden">Vkontakte
             </span>
           </a>
         </li>
         <li class="social-item">
           <a class="button button-social" href="#">
-            <img class="social-image" src="img/social-media/telegram.svg" width="18" height="15.1">
+            <img class="social-image" src="img/social-media/telegram.svg" width="18" height="15.1" alt="">
             <span class="visually-hidden">Telegram
             </span>
           </a>
         </li>
         <li class="social-item">
           <a class="button button-social" href="#">
-            <img class="social-image" src="img/social-media/youtube.svg" width="22" height="17">
+            <img class="social-image" src="img/social-media/youtube.svg" width="22" height="17" alt="">
             <span class="visually-hidden">YouTube
             </span>
           </a>
@@ -288,7 +288,7 @@
     </section>
     <section class="author">
     <a class="watermark" href="https://htmlacademy.ru">
-      <img class="creator" src="img/HTML Academy.svg" alt="логотип онлайн-школы HTML Academy">
+      <img class="creator" src="img/HTML Academy.svg" width="114.9" height="32.9" alt="логотип онлайн-школы HTML Academy">
     </a>
     </section>
   </footer>
