--- a/index.html
+++ b/index.html
@@ -6,36 +6,38 @@
     <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
-    <header class="main-header">
-      <nav class="header-navigation">
-        <a class="navigation-logo-link" href="#">
-          <img class="navigation-logo" src="img/logotip.svg" alt="логотип города Седона" width="140" height="70.05">
+    <header class="header-main">
+      <nav class="navigation-header">
+        <a class="navigation-header-logo-link" href="#">
+          <img class="navigation-header-logo" src="img/logotip.svg" alt="логотип города Седона" width="140" height="70.05">
         </a>
-        <ul class="navigation-list">
-          <li class="navigation-item">
-            <a class="navigation-link active" href="">Главная
+        <ul class="navigation-header-list">
+          <li class="navigation-header-item">
+            <a class="navigation-header-link active" href="">Главная
             </a>
           </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">О Седоне
+          <li class="navigation-header-item">
+            <a class="navigation-header-link" href="#">О Седоне
             </a>
           </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="catalog.html">Гостиницы
+          <li class="navigation-header-item">
+            <a class="navigation-header-link" href="catalog.html">Гостиницы
             </a>
           </li>
         </ul>
+      </nav>
+      <nav class="navigation-user">
         <ul class="navigation-user-list">
           <li class="navigation-user-item">
             <a class="navigation-user-link" href="#">
-              <img class="navigation-user-image" src="img/loup.svg" width="20" height="20">
+              <img class="navigation-user-image" src="img/loup.svg" width="20" height="20" alt="">
               <span class="visually-hidden">Поиск
               </span>
             </a>
           </li>
           <li class="navigation-user-item">
             <a class="navigation-user-link" href="#">
-              <img class="navigation-user-image" src="img/heart.svg" width="20" height="20">
+              <img class="navigation-user-image" src="img/heart.svg" width="20" height="20" alt="">
               <span class="visually-hidden">Избранное
               </span>
               <span class="notification-badge">12
@@ -49,16 +51,16 @@
     </header>
     <main class="main-index">
       <section class="hero">
-        <img class="hero-background" src="img/index/index-background.jpg" width="1200" height="485">
-        <img class="hero-welcome" src="img/index/welcome.svg" width="458" height="352">
-        <img class="stairs" src="img/index/stairs.svg" width="1200" height="57">
+        <img class="hero-background" src="img/index/index-background.jpg" width="1200" height="485" alt="">
+        <img class="hero-welcome" src="img/index/welcome.svg" width="458" height="352" alt="">
+        <img class="stairs" src="img/index/stairs.svg" width="1200" height="57" alt="">
         <h1 class="visually-hidden">Седона — город в Аризоне
         </h1>
       </section>
     <section class="advantages">
-      <p class="advantages-lead">Седона — небольшой городок в Аризоне, заслуживающий большего!
+      <p class="advantages-title">Седона — небольшой городок в Аризоне, заслуживающий большего!
       </p>
-      <p class="advantages-lead-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
+      <p class="advantages-subtitle">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
       </p>
       <h2 class="visually-hidden">Преимущества
       </h2>
@@ -99,27 +101,27 @@
     <section class="infrastructure">
       <h2 class="visually-hidden">Инфраструктура
       </h2>
-      <p class="infrastructure-lead">Приезжайте в Седону отдохнуть в комфорте и уюте!
+      <p class="infrastructure-title">Приезжайте в Седону отдохнуть в комфорте и уюте!
       </p>
-      <p>Опытный персонал и качественное обслуживание!
+      <p class="infrastructure-subtitle">Опытный персонал и качественное обслуживание!
       </p>
       <ul class="infrastructure-list">
         <li class="infrastructure-item">
-          <img class="infrastructure-image" src="img/index/infrastructure/house.svg" width="75" height="72">
+          <img class="infrastructure-image" src="img/index/infrastructure/house.svg" width="75" height="72" alt="">
           <h3 class="infrastructure-title">Жильё
           </h3>
           <p class="infrastructure-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!
           </p>
         </li>
         <li class="infrastructure-item">
-          <img class="infrastructure-image" src="img/index/infrastructure/house.svg" width="74" height="70">
+          <img class="infrastructure-image" src="img/index/infrastructure/house.svg" width="74" height="70" alt="">
           <h3 class="infrastructure-title">Еда
           </h3>
           <p class="infrastructure-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
           </p>
         </li>
         <li class="infrastructure-item">
-          <img class="infrastructure-image" src="img/index/infrastructure/souvenir.svg" width="64" height="76">
+          <img class="infrastructure-image" src="img/index/infrastructure/souvenir.svg" width="64" height="76" alt="">
           <h3 class="infrastructure-title">Сувениры
           </h3>
           <p class="infrastructure-description">Не только китайского, но и настоящего местного производства!
@@ -130,13 +132,13 @@
     <section class="search">
       <h2 class="search-title">Заинтересовались?
       </h2>
-      <p class="search-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне
+      <p class="search-subtitle">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне
       </p>
       <a class="button button-search" href="catalog.html">Поиск гостиницы в Седоне
       </a>
     </section>
     <section class="subcribe">
-      <img class="subscribe-background" src="img/index/subscribe-background.jpg" width="1200" height="414,86">
+      <img class="subscribe-background" src="img/index/subscribe-background.jpg" width="1200" height="414,86" alt="">
       <h2 class="subscribe-title">Подпишитесь на рассылку
       </h2>
       <p class="search-description">Только полезная информация и никакого спама, честное бойскаутское!
@@ -156,21 +158,21 @@
         <ul class="social-list">
           <li class="social-item">
             <a class="button button-social" href="#">
-              <img class="social-image" src="img/social-media/vkontakte.svg" width="24" height="14">
+              <img class="social-image" src="img/social-media/vkontakte.svg" width="24" height="14" alt="">
               <span class="visually-hidden">Vkontakte
               </span>
             </a>
           </li>
           <li class="social-item">
             <a class="button button-social" href="#">
-              <img class="social-image" src="img/social-media/telegram.svg" width="18" height="15.1">
+              <img class="social-image" src="img/social-media/telegram.svg" width="18" height="15.1" alt="">
               <span class="visually-hidden">Telegram
               </span>
             </a>
           </li>
           <li class="social-item">
             <a class="button button-social" href="#">
-              <img class="social-image" src="img/social-media/youtube.svg" width="22" height="17">
+              <img class="social-image" src="img/social-media/youtube.svg" width="22" height="17" alt="">
               <span class="visually-hidden">YouTube
               </span>
             </a>
@@ -183,7 +185,7 @@
       </section>
       <section class="author">
       <a class="watermark" href="https://htmlacademy.ru">
-        <img class="creator" src="img/HTML Academy.svg" alt="логотип онлайн-школы HTML Academy">
+        <img class="creator" src="img/HTML Academy.svg" width="114.9" height="32.9" alt="логотип онлайн-школы HTML Academy">
       </a>
       </section>
     </footer>
