--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header class="header-main">
       <nav class="navigation-header">
         <a class="navigation-header-logo-link" href="#">
-          <img class="navigation-header-logo" src="img/logotip.svg" alt="логотип города Седона" width="140" height="70.05">
+          <img class="navigation-header-logo" src="img/logo.svg" alt="логотип города Седона" width="140" height="70.05">
         </a>
         <ul class="navigation-header-list">
           <li class="navigation-header-item">
@@ -30,7 +30,7 @@
         <ul class="navigation-user-list">
           <li class="navigation-user-item">
             <a class="navigation-user-link" href="#">
-              <img class="navigation-user-image" src="img/loup.svg" width="20" height="20" alt="">
+              <img class="navigation-user-image" src="img/search.svg" width="20" height="20" alt="">
               <span class="visually-hidden">Поиск
               </span>
             </a>
@@ -51,26 +51,26 @@
     </header>
     <main class="main-index">
       <section class="hero">
-        <img class="hero-background" src="img/index/index-background.jpg" width="1200" height="485" alt="">
-        <img class="hero-welcome" src="img/index/welcome.svg" width="458" height="352" alt="">
-        <img class="stairs" src="img/index/stairs.svg" width="1200" height="57" alt="">
+        <img class="hero-welcome" src="img/index/hero/welcome.svg" width="458" height="352" alt="">
+        <img class="stairs" src="img/index/hero/stairs.svg" width="1200" height="57" alt="">
         <h1 class="visually-hidden">Седона — город в Аризоне
         </h1>
       </section>
-    <section class="advantages">
-      <p class="advantages-title">Седона — небольшой городок в Аризоне, заслуживающий большего!
+    <section class="advantages-lead">
+      <h2 class="title advantages-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+      <p class="subtitle advantages-subtitle">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
       </p>
-      <p class="advantages-subtitle">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
-      </p>
+      </section>
+      <section class="advantages">
       <h2 class="visually-hidden">Преимущества
       </h2>
+      <img class="city" src="img/index/city.jpg" widht="800" height="385" alt="флаг штатов на фоне здания внутри города Седон">
       <ul class="advantages-list">
         <li class="advantages-item">
-          <img class="city" src="img/index/city.jpg" widht="800" height="385" alt="флаг штатов на фоне здания внутри города Седон">
-          <h3 class="advantages-title">Настоящий городок
-          </h3>
-          <p>Седона — не аттракцион для туристов, там течёт своя жизнь
-          </p>
+            <h3 class="advantages-title">Настоящий городок
+            </h3>
+            <p>Седона — не аттракцион для туристов, там течёт своя жизнь
+            </p>
         </li>
         <li class="advantages-item">
           <h3 class="advantages-title">Небольшая площадь
@@ -90,7 +90,7 @@
           </p>
         </li>
         <li class="advantages-item">
-          <img class="devil's bridge" src="img/index/devil's bridge.jpg" width="800" height="385" alt="мост дьявола">
+          <img class="devil's bridge" src="img/index/advantages/devils-bridge.jpg" width="800" height="385" alt="мост дьявола">
           <h3 class="advantages-title">Там есть мост дьявола
           </h3>
           <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется
@@ -101,9 +101,9 @@
     <section class="infrastructure">
       <h2 class="visually-hidden">Инфраструктура
       </h2>
-      <p class="infrastructure-title">Приезжайте в Седону отдохнуть в комфорте и уюте!
+      <p class="title infrastructure-title">Приезжайте в Седону отдохнуть в комфорте и уюте!
       </p>
-      <p class="infrastructure-subtitle">Опытный персонал и качественное обслуживание!
+      <p class="subtitle infrastructure-subtitle">Опытный персонал и качественное обслуживание!
       </p>
       <ul class="infrastructure-list">
         <li class="infrastructure-item">
@@ -130,18 +130,18 @@
       </ul>
     </section>
     <section class="search">
-      <h2 class="search-title">Заинтересовались?
+      <h2 class="title search-title">Заинтересовались?
       </h2>
-      <p class="search-subtitle">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне
+      <p class="subtitle search-subtitle">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне
       </p>
       <a class="button button-search" href="catalog.html">Поиск гостиницы в Седоне
       </a>
     </section>
     <section class="subcribe">
       <img class="subscribe-background" src="img/index/subscribe-background.jpg" width="1200" height="414,86" alt="">
-      <h2 class="subscribe-title">Подпишитесь на рассылку
+      <h2 class="title subscribe-title">Подпишитесь на рассылку
       </h2>
-      <p class="search-description">Только полезная информация и никакого спама, честное бойскаутское!
+      <p class="subtitle search-subtitle">Только полезная информация и никакого спама, честное бойскаутское!
       </p>
       <form class="newsletter-form" action="https://echo.htmlacademy.ru" method="post">
         <input class="newsletter-field" placeholder="Ваш e-mail" type="email" name="email">
